2003-07-02 Aaron Faupell
	* irc.tcl moved cmd-reload to ::irc::reload. removed
	unused nick variable.
	* irc.man added all the recently created
	commands to the man page.


2003-06-30  David N. Welton  <davidw@dedasys.com>

	* irc.tcl (::irc::connection): connection no longer takes
	host/port arguments.  This is done by connect now.  Added note
	that compatibility code for older versions should be removed after
	a release cycle or two.  (Aaron Faupell)
	(cmd-connect): connect command now takes hostname and port
	arguments. (Aaron Faupell)
	(cmd-reload): New command reloads irc.tcl file, making it possible
	to make changes in a running system without losing the connection.
	(::irc::connection): The unique namespace for irc connections no
	longer includes the hostname. (Aaron Faupell)
	(::irc::connections): New command - return list of existing
	connections (Aaron Faupell).
	(cmd-config): Per connection configuration (Aaron Faupell).
	(cmd-peername): New command - get socket peername.
	(cmd-sockname): New command - get socket name.
	(cmd-disconnect): New command - disconnect the connection without
	destroying it.

	* irc.man: Updated the man page to reflect the new connect and
	connection commands.

2003-05-28  David N. Welton  <davidw@dedasys.com>

	* irc.tcl (cmd-quit): Add default QUIT message.

2003-05-25  David N. Welton  <davidw@dedasys.com>

	* irc.tcl: Several cleanups/improvements by Aaron Faupell.
	(cmd-getevent) Fixed typo.
	(cmd-user): Added backwards compatible cmd-user.
	(cmd-connect): Minor improvements/cleanup.
	(GetEvent): Changed parsing of $line components.

2003-05-22  Andreas Kupries  <andreask@activestate.com>

	* irc.man: Fixed some typos in the manpage which prevented
	  conversion.

2003-05-17  David N. Welton  <davidw@dedasys.com>

	* irc.man: Add key option to channel join command.  Provided by
	  Aaron Faupell.

2003-05-16  David N. Welton  <davidw@dedasys.com>

	* irc.man: Added Aaron's updated documentation, including the new